--- a/LanguageCenter/Areas/Teacher/Home.cshtml
+++ b/LanguageCenter/Areas/Teacher/Home.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
-@model LanguageCenter.Areas.Teacher.HomeModel
+@model LanguageCenter.Areas.Teacher.Pages.HomeModel
 @{
+    ViewData["Title"] = "Teacher Dashboard";
+    Layout = "~/Areas/Teacher/Pages/Shared/_Layout.cshtml";
 }
